--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
        <h3>The web is simple</h3>
        <p>The web is text files and hyperlinks navigated through a browser. You use a markup language to format your content. You use markup to link other text files or resources.  That is it. That is why back in the 90s any teenager with access to a computer and the internet could decide to write a web page during lunch time and have one before dinner.</p>
        
-       <p> We wanted more interaction, though. So we quickly got forms and JavaScript. So you could either run scripts on the browser or send them to a server for data to be processed. Then we would see a page giving us the output. Once at the server we could decide to save that data somewhere, if we wished it so.</p>
+       <p> We wanted more interaction, though. So we quickly added forms and JavaScript. So you could either run scripts on the browser or send them to a server for data to be processed. Then we would see a page giving us the output. Once at the server we could decide to save that data somewhere, if we wished it so.</p>
 
-       <p>This is still the basics of the web and web programming. We still have what ammounts to a simple stack.</p>
+       <p>This is still the basics of the web and web programming. We still have what amounts to a simple stack.</p>
 
        <h3>Our tools are complex</h3>
        <p>If the web is so simple, why is it so hard to do web programming? Whereas in the early years of the web the problem was that we lacked good tools, today the problem is that our tools are too complex. The complexity of languages, frameworks, and tooling to support around those languages and frameworks is what makes web development hard. It used to be that only backend web development was hard. Now front end development also is overly complex.</p>
@@ -31,7 +31,7 @@
 
        <p>Another common project is how the project died, yet your application depends on it. Or how the latest update broke your code.</p>
 
-       <p>So Why have we made it so hard on ourselves? An unfortunate reality is that a quick way to make a name for yourself is to create a library or a framework. Having the words "creator of" next our our name has a patina that "maintainer of" lacks, unless it is a high profile project.  So there is a builtin payoff to create more frameworks and libraries. Some languages make it so easy to do, that everyone jumps in and writes their own library. When you have such a variety of choices, then having configurable tooling is a necessity.</p>
+       <p>So why have we made it so hard on ourselves? An unfortunate reality is that a quick way to make a name for yourself is to create a library or a framework. Having the words "creator of" next our name has a patina that "maintainer of" lacks, unless it is a high profile project.  So there is a builtin payoff to create more frameworks and libraries. Some languages make it so easy to do, that everyone jumps in and writes their own library. When you have such a variety of choices, then having configurable tooling is a necessity.</p>
 
        <p>And if it was only complexity on the development side, that would be bad enough. Yet user experience suffers from this as well. In the US most people enjoy faster internet speeds than we had back in the 90s. Yet sometimes the internet feels slower. So we use more tools, more frameworks, and more libraries to get around problems of google spiders not being able to see your SPA or for why your site is slow.</p>
 
@@ -49,7 +49,7 @@
 
        <p>The early web was keenly aware of these meanings. So people explored them. They played with it. They wrote stories. They wrote puzzles. They felt the potential inherited within the hyperlink.</p>
 
-       <p>We lost its meaning as we began using links mainly as buttons and addresses. The hyperlinked metaphor died. Ironically the links is used in every single web applications.</p>
+       <p>We lost its meaning as we began using links mainly as buttons and addresses. The hyperlinked metaphor died. Ironically the link is used in every single web applications.</p>
 
 
 
@@ -61,7 +61,7 @@
 
 
        <h3>This web site</h3>
-       <p>This web site is following this minimalistic plan. This page, the first one, is written only with html. I will add tools and scripts as I see a need. It's design is also meant to stay minimalistic. </p> 
+       <p>This web site is following this minimalistic plan. This page, the first one of the site, is written only with html. I will add tools and scripts as I see a need for them. Its design is also meant to stay minimalistic. </p> 
 
 
 
