--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           James Hague's blog, "Programming in the twenty-first century" is one of my inspirations for this site.
         </p>
 
-        <p>James Hague's blog, <a href="prog21.dadgum.com">"prog21.dadgum.com</a> is one of my favorite programming web sites. It is like a great deli in a corner of a neighborhood: you forget that it exists until you happen to be walking by and you stop to get a great sandwich. Everytime I stumble upon it, I end up hoppoing from page to page for hours. It is probably one of the most readable tech writing on the internet. If you haven't read it, follow the link above and get prepared to be delighted.</p>
+        <p>James Hague's blog, <a href="prog21.dadgum.com">prog21.dadgum.com</a> is one of my favorite programming web sites. It is like a great deli in a corner of a neighborhood: you forget that it exists until you happen to be walking by and you stop to get a great sandwich. Everytime I stumble upon it, I end up hoppoing from page to page for hours. It is probably one of the most readable tech writing on the internet. If you haven't read it, follow the link above and get prepared to be delighted.</p>
 
         <p>"Programming in the twenty-first century" is one of my models for the current site. It is not a direct inspiration in that I didn't remember it before I started writing this site. Yet I absorbed its simplicity and minimalism. Looking at the site again, keeping in mind my deliberate blogging experiment, I noticed the following features.</p>
 
