changes to files

--- a/rakefile.html
+++ b/rakefile.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <meta name="keywords" content="tumble,HTML,development,minimalism">
-        <title>Template and Sections</title> 
+        <meta name="keywords" content="tumble,HTML,development,minimalism, ruby">
+        <title>Adding a rakefile</title> 
         <link rel="stylesheet" type="text/css" href="site.css"></link>
     </head>
    
@@ -14,13 +14,15 @@
     </header>
 
       <article class="article">
-        <h2 class="title">Template and Sections</h2> 
+        <h2 class="title">Adding a rakefile</h2> 
         <p class="summary">
-         
+          I added a rakefile to my blog setup to facilitate future tasks.
         </p>
 
+        <p>The next step on my adventure of minimalistic blogging was to add a rakefile to begin organizing and automating some regular tasks. The first task that I added is "publish". Right now all what it does is to copy the article that is ready to be published as the index.html file. In the future it may do a number of things, such as generate/add the article in an rss feed and add the last few entries as links in the page. Maybe.</p>
+
         <section class="tags">
-         Tags:
+         Tags: tumble, hyptertext, minimalist, ruby 
         </section> 
       </article> 
 
