reorganized the folders

--- a/drafts/rakefile.html
+++ b/drafts/rakefile.html
@@ -19,7 +19,9 @@
           I added a rakefile to my blog setup to facilitate future tasks.
         </p>
 
-        <p>The next step on my adventure of minimalistic blogging was to add a rakefile to begin organizing and automating some regular tasks. The first task that I added is "publish". Right now all what it does is to copy the article that is ready to be published as the index.html file. In the future it may do a number of things, such as generate/add the article in an rss feed and add the last few entries as links in the page. Maybe.</p>
+        <p>The next step on my adventure of minimalistic blogging was to add a rakefile to begin organizing and automating some regular tasks. The first task that I added is "publish". The first task that I wrote was to copy the article that is ready to be published as the index.html file. A few days later I added git commands so that it would commit the change automatically.</p>
+       
+        <p> In the future it may do a number of things, such as generate/add the article in an rss feed and add the last few entries as links in the page. Maybe.</p>
 
         <section class="tags">
          Tags: tumble, hyptertext, minimalist, ruby 
