--- a/template.html
+++ b/template.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <meta id="keywords" name="keywords" content="">
         
-        <title>Template and Sections</title> 
+        <title></title> 
         <link id="stylesheet" rel="stylesheet" type="text/css" href="../site.css"></link>
     </head>
    
@@ -16,7 +16,7 @@
 
       <article class="article">
         <h2 class="title">  </h2> 
-        <p class="summary">
+        <p class="summary" id="summary">
          
         </p>
 
