changes to the format of the stay in contact

--- a/template.html
+++ b/template.html
@@ -32,10 +32,11 @@
       
        <footer class="footer">
 
-         <p class="about"><a href="blog/manifesto.html">About</a> me: I am a software developer. I code in C#, Ruby, and many other languages.  I like poetry, museums, and ukuleles. I lead my life through the principles of dadaism and nonviolence.</p>
-          <p>
-          <a href="http://twitter.com/hugoestr/">twitter.com/hugoestr</a>  
-          <a href="http://github.com/hugoestr/">github.com/hugoestr</a>
+         <p class="about"><a href="http://hugoestr.github.io/blog/manifesto.html">About</a> me: I am a software developer. I code in C#, Ruby, and many other languages.  I like poetry, museums, and ukuleles. I lead my life through the principles of dadaism and nonviolence.</p>
+        <p>Follow:
+          <a href="http://hugoestr.github.io/feed.atom">atom</a>  
+          twitter: <a href="http://twitter.com/hugoestr/">@hugoestr</a>  
+          github: <a href="http://github.com/hugoestr/">hugoestr</a>
         </p> 
 
         <p>Lovingly crafted by hand with <a href="http://www.vim.org/">Vim</a></p>
