--- a/template.html
+++ b/template.html
@@ -19,6 +19,9 @@
         <p class="summary" id="summary">
          
         </p>
+        
+         <p id="published-date"></p>
+        <p> </p>
 
         <section class="tags">
           Tags: <span id="tags"></span>
@@ -39,7 +42,7 @@
           github: <a href="http://github.com/hugoestr/">hugoestr</a>
         </p> 
 
-        <p>Lovingly crafted by hand with <a href="http://www.vim.org/">Vim</a></p>
+        <p>Lovingly crafted by hand with <a href="http://www.vim.org/">Vim</a>; built with <ra href="https://github.com/ruby/rake">rake</a>.</p>
       </footer>
     </body>
 </html>
