--- a/drafts/multitask.html
+++ b/drafts/multitask.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <meta name="keywords" content="OS,multitasking,ruby,concurrency">
         <title>Template and Sections</title> 
-        <link rel="stylesheet" type="text/css" href="site.css"></link>
+        <link rel="stylesheet" type="text/css" href="../site.css"></link>
     </head>
    
     <body>
