finishing up the git dance. I need to add more steps in the rake file

--- a/template.html
+++ b/template.html
@@ -50,7 +50,7 @@
           <a href="http://github.com/hugoestr/">github</a>
         </p> 
 
-        <p>Lovingly crafted by hand with <a href="http://www.vim.org/">Vim</a>; built with <a href="https://github.com/ruby/rake">rake</a> file.</p>
+        <p>Lovingly crafted by hand with <a href="http://www.vim.org/">Vim</a></p>
       </footer>
     </body>
 </html>
