template has link to home. Added tags to put the content in a section of the previous entries.

--- a/template.html
+++ b/template.html
@@ -11,7 +11,7 @@
    
     <body>
     <header class="header">
-      <h1> &gt;&gt;= Hugo Estrada</h2>
+      <h1> <a class="home-link" href="http://hugoestr.github.io">&gt;&gt;=</a> Hugo Estrada</h2>
     </header>
 
       <article class="article">
