finished with draft. Adding glass.exs

--- a/drafts/song_structure.html
+++ b/drafts/song_structure.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <meta id="keywords" name="keywords" content="til,music">
+        <meta id="keywords" name="keywords" content="til,music,song structure">
         
         <title></title> 
         <link id="stylesheet" rel="stylesheet" type="text/css" href="../site.css"></link>
@@ -28,7 +28,7 @@
           <p> ABABCB<br />
             Verse / Chorus / Verse / Chorus / Bridge / Chorus</p>
 
-        <p>This is one of the most popular song structures according to Anthony Ceseri's blog post on song structure [1]. You have three musical ideas. The first one leads to the chorus, which is the main musical idea of the song. Then you have a bridge to bring another musical idea and you finish with the chorus. This structure is likely a slight variation of the form below.</p>
+        <p>This is one of the most popular song structures according to Anthony Ceseri's blog post [1]. You have three musical ideas. The first idea leads to the chorus, and the bridge adds some variety. This structure is likely a slight variation of the form below.</p>
 
         <p>AB<br />
         Verse/Chorus/Verse/Chorus</p>
@@ -43,13 +43,13 @@
 
         <p>These forms feel very satisfying. There seems to be some connection between counting numbers. You start with one. You then get two, three, and then you keep repeating them.</p>
 
-        <p>I also wonder about human psychology and the existing forms. It seems remarkably small, especially considering how complex classical music can feel. Perhaps there are only a few forms because human minds can only hold so many musical ideas in their mind at once before it gets lost.</p>
+        <p>I also wonder about human psychology and the existing forms. It seems remarkably small, especially considering how complex classical music can feel. Perhaps there are only a few forms because human minds can only hold so many musical ideas in their mind at once before they get lost.</p>
 
         <p>The strophic form also feel like a loop. Considering minimalistic classical music and electronic sampling, it feels both old and modern.</p>
 
         <h3>References:</h3>
-        [1] <a href="https://www.songwriting.net/blog/bid/207339/Songwriting-Tip-Understanding-the-Most-Common-Song-Structures">Understanding the most common song structures</a>
-        [2] <a href="https://en.wikipedia.org/wiki/Music_form">Music Form</a>
+        [1] <a href="https://www.songwriting.net/blog/bid/207339/Songwriting-Tip-Understanding-the-Most-Common-Song-Structures">Understanding the most common song structures</a> <br />
+        [2] <a href="https://en.wikipedia.org/wiki/Music_form">Music Form</a> <br />
         [3] <a href="https://en.wikipedia.org/wiki/Strophic_form">Strophic Form</a>
         </section>
 
