fixed working on a melody

--- a/drafts/working_on_a_melody.html
+++ b/drafts/working_on_a_melody.html
@@ -20,7 +20,7 @@
           <p class="summary" id="summary">
             Music day 2 
           </p>
-          <p id="published-date" class="date"></p>
+          <p id="published-date" class="date">05/31/2019</p>
         </header> 
         
         <section id="content">
@@ -28,7 +28,7 @@
         <p>After learning about song structure, I went back to the rhythm track that I made yesterday and worked on a simple melody. I had the drum track running on the ipad. I started humming a melody. I wanted to capture it so I used a piano app on the phone. I will try to play it on the ukulele and transcribe it to LMMS.</p>
 
 
-          <p>I am sure that the melody it is a half remembered sequence. It doesn't matter. The point right now is to learn and practice.</p>
+          <p>I am sure that the melody is a half remembered sequence. It doesn't matter. The point right now is to learn and practice.</p>
         </section>
 
 
