--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <meta id="keywords" name="keywords" content="til,music,song structure">
+        <meta id="keywords" name="keywords" content="music">
         
         <title></title> 
-        <link id="stylesheet" rel="stylesheet" type="text/css" href="site.css"></link>
+        <link id="stylesheet" rel="stylesheet" type="text/css" href="../site.css"></link>
     </head>
    
     <body>
@@ -16,41 +16,19 @@
 
       <article class="article">
         <header>
-          <h2 class="title" id="title">TIL: song structure</h2> 
+          <h2 class="title" id="title">Working on a melody</h2> 
           <p class="summary" id="summary">
-            Music day 1 
+            Music day 2 
           </p>
-          <p id="published-date" class="date">05-29-2019</p>
+          <p id="published-date" class="date">05/31/2019</p>
         </header> 
         
         <section id="content">
  
-          <p> ABABCB<br />
-            Verse / Chorus / Verse / Chorus / Bridge / Chorus</p>
+        <p>After learning about song structure, I went back to the rhythm track that I made yesterday and worked on a simple melody. I had the drum track running on the ipad. I started humming a melody. I wanted to capture it so I used a piano app on the phone. I will try to play it on the ukulele and transcribe it to LMMS.</p>
 
-        <p>This is one of the most popular song structures according to Anthony Ceseri's blog post [1]. You have three musical ideas. The first idea leads to the chorus, and the bridge adds some variety. This structure is likely a slight variation of the form below.</p>
 
-        <p>AB<br />
-        Verse/Chorus/Verse/Chorus</p>
-
-        <p>This is an older form in Western music. It is common in folk music, and  it has been used in classical leider. This is also binary form in Western classical music [2]. This form itself  is a variation of an even more basic structure.</p> 
-
-        <p>AA...<br />
-
-        <p>This is having a single musical idea that is repeated again and again. This is called strophic form.[3]</p>
-
-        <h3>Thoughts</h3>
-
-        <p>These forms feel very satisfying. There seems to be some connection between counting numbers. You start with one. You then get two, three, and then you keep repeating them.</p>
-
-        <p>I also wonder about human psychology and the existing forms. It seems remarkably small, especially considering how complex classical music can feel. Perhaps there are only a few forms because human minds can only hold so many musical ideas in their mind at once before they get lost.</p>
-
-        <p>The strophic form also feel like a loop. Considering minimalistic classical music and electronic sampling, it feels both old and modern.</p>
-
-        <h3>References:</h3>
-        [1] <a href="https://www.songwriting.net/blog/bid/207339/Songwriting-Tip-Understanding-the-Most-Common-Song-Structures">Understanding the most common song structures</a> <br />
-        [2] <a href="https://en.wikipedia.org/wiki/Music_form">Music Form</a> <br />
-        [3] <a href="https://en.wikipedia.org/wiki/Strophic_form">Strophic Form</a>
+          <p>I am sure that the melody is a half remembered sequence. It doesn't matter. The point right now is to learn and practice.</p>
         </section>
 
 
