Publishing  drafts/first_impressions_of_pure_data.html

--- a/index.html
+++ b/index.html
@@ -16,19 +16,21 @@
 
       <article class="article">
         <header>
-          <h2 class="title" id="title">Working on a melody</h2> 
+          <h2 class="title" id="title">First Impressions of Pure Data</h2> 
           <p class="summary" id="summary">
-            Music day 2 
+            Some thoughts on Pure Data. Music day 4
           </p>
-          <p id="published-date" class="date">05/31/2019</p>
+          <p id="published-date" class="date"></p>
         </header> 
         
         <section id="content">
  
-        <p>After learning about song structure, I went back to the rhythm track that I made yesterday and worked on a simple melody. I had the drum track running on the ipad. I started humming a melody. I wanted to capture it so I used a piano app on the phone. I will try to play it on the ukulele and transcribe it to LMMS.</p>
+          <p><a href="https://puredata.info/">Pure Data</a> (pd) is a visual musical  programming language that is also a synthesizer. It feels to me like a mixture of Scratch and Lisp. It is a graphic programming language, so you create blocks with objects, numbers, or messages, and you link them with cables. The metaphor is that you are plugging in cables from one module into another. A programming unit is called a patch, keeping up with modular synthesizer metaphor.</p>
 
+          <p>I am using the <a href="http://www.pd-tutorial.com">Pd tutorial</a> as my guide to learning the language. I am about to finish the second chapter, and there is a series of patches that create small but interesting musical outputs.
+          </p>
 
-          <p>I am sure that the melody is a half remembered sequence. It doesn't matter. The point right now is to learn and practice.</p>
+          <p>I hope that learning pd will allow me to explore sound, play with synths without having to buy expensive hardward, and to implement some ideas that I have had about aleatory music.</p>
         </section>
 
 
